@@ -1,13 +1,12 @@
 package teampixl.com.pixlpos.database;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Objects;
 
 public record MetadataWrapper(Map<String, Object> metadata) {
-    public MetadataWrapper(Map<String, Object> metadata) {
-        // Create a defensive copy and make it unmodifiable
-        this.metadata = Collections.unmodifiableMap(metadata);
+    public MetadataWrapper {
+        // Ensure the map is immutable and non-null values
+        metadata = Map.copyOf(Objects.requireNonNull(metadata, "metadata map cannot be null"));
     }
 
     @Override
@@ -16,6 +15,11 @@ public record MetadataWrapper(Map<String, Object> metadata) {
         if (o == null || getClass() != o.getClass()) return false;
         MetadataWrapper that = (MetadataWrapper) o;
         return Objects.equals(metadata, that.metadata);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(metadata);
     }
 
     @Override
